k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopstools-web
spec:
  selector: { app: devopstools-web }
  ports: [{ port: 80, targetPort: 3000 }]
